minikube/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: codezero
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
