minikube/my-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
  namespace: codezero
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: codezero
        - podSelector:
            matchLabels:
              app: trusted
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: codezero
